Corrección paginación y test